@@ -7,6 +7,7 @@ TODO: check for #TODO
 TODO: new context
 TODO: consume--
 TODO: ae::log examples
+TODO: consolide slogging, e.g AnyEvent::Debug
 6.01 
         - INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
           the TTL as fourth element - this affects ->resolve, ->request
